# Quiz_DRF_Backend

./: README.md  db.sqlite3  pyproject.toml
config/: settings.py  urls.py
quiz/: models.py  serializers.py  urls.py  views.py
quiz/migrations/: 0001_initial.py  0002_attempt_score.py
